# motionlab

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  .mcp.json  .pre-commit-config.yaml  .prettierignore  .vale.ini  AGENTS.md  CLAUDE.md  Untitled  biome.jsonc  buf.gen.yaml  buf.yaml  eslint.config.ts  fix-aliases.mjs  package.json  plan.md  pnpm-lock.yaml  readme.md  skills-lock.json  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture-decision.yml  bug.yml  config.yml  feature.yml  investigation.yml  refactor.yml
.github/styles/MotionLab/: Weasel.yml
.github/workflows/: ci.yml  docs.yml  release.yml
agents/skills/architecture-guardian/: SKILL.md
agents/skills/chrono-runtime-specialist/: SKILL.md
agents/skills/docs-and-adr-curator/: SKILL.md
agents/skills/frontend-workbench-specialist/: SKILL.md
agents/skills/protocol-schema-steward/: SKILL.md
agents/skills/repo-cartographer/: SKILL.md
agents/skills/results-storage-architect/: SKILL.md
agents/skills/sensor-systems-specialist/: SKILL.md
agents/skills/test-strategist/: SKILL.md
agents/skills/viewport-performance-guardian/: SKILL.md
apps/: AGENTS.md
apps/desktop/: .npmrc  electron-builder.json5  forge.config.ts  package.json  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.mjs  vite.renderer.config.ts
apps/desktop/dist-electron/: main.js  preload.mjs
apps/desktop/examples/: pendulum.motionlab  pendulum.step
apps/desktop/scripts/: dev.mjs
apps/desktop/src/: debug-session.ts  (+6 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
data/: 0003834589__out.log.1  0003834589_asm.stp
docs/: AGENTS.md  ai-agent-tasks.md  freecad-feature-recognition-aag-memo.md  known-limitations.md  next.md
docs/architecture/: README.md  agent-debug-mode.md  bootstrap-decisions.md  chrono-runtime-architecture.md  index.md  packaging.md  principles.md  protocol-overview.md  repo-map.md  results-architecture.md  runtime-topology.md  sensor-architecture.md  system-overview.md  viewport-architecture.md
docs/briefs/: epic-1-floating-shell.md  epic-1-prompts.md  epic-10-prompts.md  epic-11-prompts.md  epic-12-prompts.md  epic-13-prompts.md  epic-14-prompts.md  epic-15-prompts.md  epic-16-prompts.md  epic-17-prompts.md  epic-18-prompts.md  epic-19-prompts.md  epic-2-contextual-inspector.md  epic-2-prompts.md  epic-20-prompts.md  epic-3-prompts.md  epic-3-results-route.md  epic-4-entity-component-system.md  epic-4-prompts.md  epic-5-prompts.md  epic-6-prompts.md  epic-7-prompts.md  epic-8-prompts.md  epic-9-prompts.md  execution-plan.md  geometry-informed-joint-creation.md  scene-building-ux-plan.md  ui-epic.md  ui-feedback-1.md  ux-overhaul.md
docs/decisions/: ADR-0001-repo-truth-and-github-execution.md  ADR-0002-sensors-are-first-class-authored-entities.md  ADR-0003-runs-and-channel-contracts.md  ADR-0004-datum-crud-contract.md  ADR-0005-joint-crud-contract.md  ADR-0006-simulation-streaming-contract.md  ADR-0007-face-level-datum-creation.md  ADR-0008-output-channel-naming-and-typing.md  ADR-0009-project-save-load-contract.md  ADR-0010-protocol-v2-native-boundary-cleanup.md  ADR-0011-missing-asset-recovery-contract.md  ADR-0012-protocol-v3-multibody-contract.md  ADR-0013-body-geometry-separation.md  ADR-0014-entity-type-aware-selection-visuals.md  ADR-0015-simulation-settings-transport-contract.md  ADR-0016-geometry-local-face-picking.md  ADR-0017-datum-face-provenance.md  ADR-template.md  index.md
docs/design-system-extraction/: 01-ui-primitives.md  02-primitives.md  03-shell-and-engineering.md  04-product-dialogs-inspectors.md  05-product-panels-viewport.md  README.md
docs/domain/: channel-model.md  glossary.md  product-model.md  simulation-model.md
docs/investigations/: datum-body-transforms.md  epics.md  transform-consistency-audit.md  ux-enhancement-proposals.md
docs/quality/: audit-report-2026-03-19.md  lint-and-format.md  performance-budget.md  testing-strategy.md
docs/workflows/: development-workflow.md  incident-debugging.md  release-workflow.md  review-workflow.md
native/cmake/: README.md
native/engine/: AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  build_occt8.bat  vcpkg-configuration.json  vcpkg.json
native/engine/bench/: sim_bench.cpp
native/engine/include/engine/: log.h  transport.h  version.h
native/engine/patches/: FindEigen3.cmake
native/engine/scripts/: build-msvc.bat  debug-engine.sh  test-msvc.bat
native/engine/src/: asset_cache.cpp  asset_cache.h  cad_import.cpp  cad_import.h  face_classifier.cpp  face_classifier.h  face_metadata_cache.cpp  face_metadata_cache.h  face_pair_analyzer.cpp  face_pair_analyzer.h  geometry_helpers.h  main.cpp  mechanism_state.cpp  mechanism_state.h  pose_math.h  primitive_generator.cpp  primitive_generator.h  ring_buffer.cpp  ring_buffer.h  shape_registry.cpp  shape_registry.h  simulation.cpp  simulation.h  transport.cpp  transport_import_project_context.cpp  transport_import_project_context.h  transport_runtime_session.cpp  transport_runtime_session.h  uuid.h
native/engine/tests/: test_cad_import.cpp  test_chrono_pendulum.cpp  test_face_classifier.cpp  test_face_pair_analyzer.cpp  test_helpers.h  test_main.cpp  test_mapping.cpp  test_mechanism_state.cpp  test_pose_math.cpp  test_roundtrip.cpp  test_simulation.cpp
native/engine/tools/: generate_pendulum.cpp  generate_templates.cpp
native/engine/vcpkg-ports/opencascade/: fix-pdb-install-vcpkg-layout.patch  portfile.cmake  vcpkg.json
schemas/: AGENTS.md
schemas/mechanism/: mechanism.proto
schemas/protocol/: transport.proto
scripts/: README.md  bootstrap.sh  buf-generate.mjs  build-engine-release.mjs  sync-occt-wasm-assets.mjs  validate-release-tag.mjs  verify-desktop-cad-assets.mjs
scripts/api-surface/: generate-exports-report.mjs
scripts/dependency-graph/: generate-workspace-graph.mjs
scripts/docs-check/: check-docs.mjs  run-markdownlint.mjs
scripts/repo-map/: generate-repo-tree.mjs
(+37 files in other folders)
